--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_svg:
   another_carousel_pro: ^1.0.2
   pinput:
+  google_nav_bar:
+  
 
 dev_dependencies:
   flutter_test:
